# easy-social

./: .gitignore  README.md  Taskfile.yml  app.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: integration-tests.yml  unit-tests.yml
easy_social/: __init__.py  auth.py  captcha.py  extensions.py  media.py  models.py  social.py
easy_social/static/css/: app.css
easy_social/static/js/: app.js
easy_social/templates/: base.html
easy_social/templates/auth/: login.html  register.html
easy_social/templates/social/: _composer.html  _post.html  explore.html  feed.html  post_detail.html  profile.html
scripts/: check_supabase_connection.py  import_fake_data.py  setup_supabase.py
seed_data/: follows.csv  posts.csv  reposts.csv  users.csv
tests/: conftest.py  test_auth_captcha.py  test_captcha.py  test_import_fake_data_helpers.py  test_media.py  test_models.py  test_social.py  test_ui_selenium.py
